--- a/H4_InitialDifficulties.tex
+++ b/H4_InitialDifficulties.tex
@@ -71,7 +71,7 @@ As mentioned earlier, in this implementation we will work on a Linux distributio
 
 \subsection{Learning process on matrix multiplication example in SDSoC}
 
-To learn MPSoC and the SDSoC IDE, Xilinx' online available materials were used available at their GitHub page, which includes some hands-on assignments. The assignments use a matrix multiplication example, preinstalled with SDSoC. A weblink to this GitHub page can be found in the references\cite{sdsoc}.%cit
+To learn MPSoC and the SDSoC IDE, Xilinx' online available materials were used available at their GitHub page, which includes some hands-on assignments. The assignments use a matrix multiplication example, preinstalled with SDSoC. A weblink to this GitHub page can be found in the references~\cite{sdsoc}.%cit
 
 \paragraph{lab1: INTRODUCTION}
 \begin{itemize}
@@ -102,7 +102,7 @@ To learn MPSoC and the SDSoC IDE, Xilinx' online available materials were used a
 	\item the difference between the malloc() and sds\_alloc() functions. The hardware functions can only access the physical address space and not the virtual one used by the software. Therefore, the sds\_alloc() function was created to skip this virtual memory translation in software.
 \end{itemize}
 
-\paragraph{lab4: DIRECTIVES} This lab covers how to set directives to speed up the hardware functions. Which directives to set and what they do, was already covered in the HLS labs at \ref{HLS}.
+\paragraph{lab4: DIRECTIVES} This lab covers how to set directives to speed up the hardware functions. Which directives to set and what they do, was already covered in the HLS labs at~\ref{HLS}.
 
 \paragraph{lab5: TASK-LEVEL PIPELINING} By using task-level pipelining I was able to achieve a speedup of 3 times with a 32x32 matrix multiplication.
 
