--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -7,6 +7,15 @@
 	pages = {195--197}
 }
 
+@ARTICLE{SeqCost, 
+	author = {E. R. Mardis},
+	title = {Anticipating the 1,000 dollar genome},
+	journal = {Genome Biology},
+	year = 2006,
+	volume = 7, 
+	pages = {112}
+}
+
 @BOOK{NIPT,
 	author = {S. Drury, M. Hill, L.S. Chitty},
 	title = {Cell-Free Fetal DNA Testing for Prenatal Diagnosis},
